--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -5,10 +5,10 @@
 $white: oklch(98.2% 0.004 91.45);
 $gray: oklch(9.21% 0 0);
 
-$bright-blue: oklch(51.01% 0.274 263.83);
-$orange-red: oklch(63.32% 0.24 31.68);
-$vivid-pink: oklch(69.02% 0.277 332.77);
-$electric-violet: oklch(53.18% 0.28 296.97);
+$color-primary: oklch(51.01% 0.274 263.83);
+$color-secondary: oklch(63.32% 0.24 31.68);
+$color-tertiary: oklch(69.02% 0.277 332.77);
+$color-quaternary: oklch(53.18% 0.28 296.97);
 
 $currency-gold: oklch(0.89 0.18 95.32);
 $currency-silver: oklch(0.86 0 0);
