--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -58,6 +58,7 @@
             align-items: center;
             height: 100%;
             width: 100%;
+            padding: 2px;
         }
     }
 }
