build: add development-only theme switch button

--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -84,6 +84,10 @@
             padding: 0px;
             gap: 24px;
             height: 100%;
+
+            > * {
+                min-width: 70px;
+            }
         }
     }
 }
