--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -10,6 +10,7 @@ $color-secondary: oklch(63.32% 0.24 31.68);
 $color-tertiary: oklch(69.02% 0.277 332.77);
 $color-quaternary: oklch(53.18% 0.28 296.97);
 
+$currency-platinum: oklch(66.67% 0.1 228.71);
 $currency-gold: oklch(0.89 0.18 95.32);
 $currency-silver: oklch(0.86 0 0);
 $currency-copper: oklch(0.79 0.19 60.08);
