--- a/src/assets/scss/theming/themes/blood-in-the-water.light.theme.scss
+++ b/src/assets/scss/theming/themes/blood-in-the-water.light.theme.scss
@@ -25,6 +25,7 @@
     --color-quaternary: #{$color-quaternary};
 
     // Currency
+    --currency-platinum: #{$currency-platinum};
     --currency-gold: #{$currency-gold};
     --currency-silver: #{$currency-silver};
     --currency-copper: #{$currency-copper};
