--- a/src/assets/scss/theming/themes/monster-manual.dark.theme.scss
+++ b/src/assets/scss/theming/themes/monster-manual.dark.theme.scss
@@ -1,7 +1,8 @@
 @mixin monster-manual-dark-theme {
     $color-secondary: #091724;
     $color-quaternary: #ff0815;
-    $color-primary: #f4e1cb;
+    $color-tertiary: #f4e1cb;
+    $color-primary: #8e22f2;
 
     // Flat
     --primary: #{$white};
@@ -42,22 +43,23 @@
     --bg-container: #{$gray-90};
     --bg-gray1: #{$bg-neutral2-light};
     --bg-gray2: #{$gray-10};
+    --bg-currency: #{$bg-neutral1-dark};
 
     // Scrollbar
     --scrollbar-color: #{$gray-60};
     --scrollbar-bg: #{$gray-90};
 
     // Button
-    --btn-bg-color: transparent;
-    --btn-border-color: var(--primary);
+    --btn-bg-color: color-mix(in srgb, var(--color-primary) 20%, transparent);
+    --btn-border-color: color-mix(in srgb, var(--color-primary) 25%, transparent);
     --btn-color: var(--title);
-    --btn-disabled-bg-color: var(--bg-container);
-    --btn-disabled-border-color: var(--bg-stroke);
-    --btn-disabled-color: var(--placeholder);
-    --btn-hovered-bg-color: var(--bg-neutral2);
-    --btn-hovered-border-color: var(--primary);
-    --btn-pressed-bg-color: var(--bg-neutral2);
-    --btn-pressed-border-color: var(--placeholder);
+    --btn-disabled-bg-color: color-mix(in srgb, var(--color-primary) 15%, transparent);
+    --btn-disabled-border-color: color-mix(in srgb, var(--color-primary) 20%, transparent);
+    --btn-disabled-color: var(--disabled);
+    --btn-hovered-bg-color: color-mix(in srgb, var(--color-primary) 25%, transparent);
+    --btn-hovered-border-color: color-mix(in srgb, var(--color-primary) 30%, transparent);
+    --btn-pressed-bg-color: color-mix(in srgb, var(--color-primary) 30%, transparent);
+    --btn-pressed-border-color: color-mix(in srgb, var(--color-primary) 35%, transparent);
 
     // #region GRADIENT
 
