--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -1,9 +1,13 @@
 @import '../../../../assets/scss/devices.scss';
 @import '../../../../assets/scss/utils.scss';
 @import '../../../../assets/scss/variables.scss';
+@import '../../../../assets/scss/typography.scss';
 
 :host {
     --border-radius: #{$border-radius};
+
+    @include typography-input();
+    // @include typography-bold();
 
     .button {
         transition: all $animation-duration $animation-function;
@@ -59,6 +63,10 @@
             height: 100%;
             width: 100%;
             padding: 2px;
+        }
+
+        &.alternate {
+            background-color: transparent;
         }
     }
 }
