--- a/src/app/shared/components/input-inspiration/input-inspiration.component.scss
+++ b/src/app/shared/components/input-inspiration/input-inspiration.component.scss
@@ -11,16 +11,17 @@
         border-radius: var(--pill-border-radius);
         cursor: pointer;
         width: var(--pill-width);
+        max-width: var(--pill-width);
 
-        background-color: var(--btn-bg-color);
+        // background-color: var(--btn-bg-color);
         color: var(--btn-color);
 
         padding-inline: 0.75rem;
         padding-block: 0.375rem;
 
-        border-color: var(--btn-border-color);
-        border-width: 1px;
-        border-style: solid;
+        // border-color: var(--placeholder);
+        // border-width: 1px;
+        // border-style: solid;
         box-sizing: border-box;
 
         .inspiration-svg g {
@@ -51,6 +52,11 @@
                 &:focus-visible {
                     background-color: var(--btn-hovered-bg-color);
                     border-color: var(--btn-hovered-border-color);
+
+                    path {
+                        transition: fill $animation-duration $animation-function;
+                        fill: url(#vertical-gradient-vhs-reggae);
+                    }
                 }
             }
 
