chore(currency): comment platinum out

--- a/src/app/routes/base/base/base.component.html
+++ b/src/app/routes/base/base/base.component.html
@@ -25,8 +25,8 @@
     </dnd-currency-display>
 
     <form class="currency-container-form" [formGroup]="currencyForm">
-        <dnd-input-number currencyDot="platinum" label="BASE.CURRENCY.PLATINUM" [formControl]="platinumFormControl">
-        </dnd-input-number>
+        <!-- <dnd-input-number currencyDot="platinum" label="BASE.CURRENCY.PLATINUM" [formControl]="platinumFormControl">
+        </dnd-input-number> -->
 
         <dnd-input-number currencyDot="gold" label="BASE.CURRENCY.GOLD" [formControl]="goldFormControl">
         </dnd-input-number>
