--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -5,18 +5,18 @@
 $white: oklch(98.2% 0.004 91.45);
 $gray: oklch(9.21% 0 0);
 
-$color-primary: oklch(51.01% 0.274 263.83);
-$color-secondary: oklch(63.32% 0.24 31.68);
-$color-tertiary: oklch(69.02% 0.277 332.77);
-$color-quaternary: oklch(53.18% 0.28 296.97);
+$color-primary: oklch(0.58 0.09 216.98);
+$color-secondary: oklch(0.69 0.18 41.28);
+$color-tertiary: oklch(0.82 0.15 74.96);
+$color-quaternary: oklch(0.58 0.09 216.98);
 
 $currency-platinum: oklch(66.67% 0.1 228.71);
 $currency-gold: oklch(0.89 0.18 95.32);
 $currency-silver: oklch(0.86 0 0);
 $currency-copper: oklch(0.79 0.19 60.08);
 
-$bg-neutral1-light: oklch(92.2% 0.004 91.45);
-$bg-neutral2-light: oklch(87.2% 0.004 91.45);
+$bg-neutral1-light: oklch(16.84% 0 0);
+$bg-neutral2-light: oklch(22.64% 0 0);
 $bg-neutral1-dark: oklch(17.3% 0 0);
 $bg-neutral2-dark: oklch(22.21% 0 0);
 
